# WaterQuality-Prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
waterquality/: data_handling.py  hyperparameter_tuning.py  inference.py  model_regitry.py  pipeline.py
